--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
               <ul>
                   <li><a href="#">Home</a></li>
                   <li><a href="#">Products</a></li>
-                  <li><a href="#">What's New</a></li>
-                  <li><a href="#">Newletter</a></li>
+                  <li><a href="#">Album</a></li>
                   <li><a href="#">Contact</a></li>
               </ul>
          
